@@ -15,7 +15,6 @@
 }
 
 html {
-  background: $color-grey-4;
   height: 100%;
   // Set the whole admin to border-box by default.
   box-sizing: border-box;
