@@ -61,6 +61,7 @@ This feature was developed by Karl Hobley and Matt Westcott.
  * Add `button-secondary bicolor` variants to the pattern library and styleguide (Adinapunyo Banerjee)
  * Add better support for non-integer / non-`id` primary keys into Wagtail's generic views, including for custom Snippets and User models (Mehrdad Moradizadeh)
  * Upgrade jQuery UI to version 1.13.2 (LB (Ben) Johnston)
+ * Update pattern library background & text examples (Albina Starykova)
 
 ### Bug fixes
 
